--- a/banking web/syles/styles.css
+++ b/banking web/syles/styles.css
@@ -2,6 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: 'Lato', sans-serif;
+	color: #1f1f1f;
 }
 
 nav{
@@ -22,7 +23,7 @@ nav{
 	justify-content: space-between;
 	align-items: center;
 	list-style: none;
-	background-color: rgb(236, 236, 236);
+	background-color: #e9e9f5;
 	border-radius: 24px;
 	padding: 0;
 }
@@ -41,7 +42,7 @@ nav{
 
 .navbar li:hover{
 	color: white;
-	background-color: blue;
+	background-color: #2c55d4;
 }
 
 .navbar li a{
@@ -99,8 +100,106 @@ nav{
 }
 
 .container{
-	margin: 50px 40px;
+	border-top: 1px solid #ddd;
+	padding-top: 30px;
+	margin: 0px 40px;
+	
 }
 
- 
+.grid_container{
+	display: grid;
+	grid-template-columns: 2fr 1fr 1.5fr;
+	gap: 20px;
+	height: 100%;
+	width: 100%;
+}
 
+.grid_container > div {
+	border-radius: 24px;
+	background-color: #e9e9f5;
+}
+
+.statistic_header{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0 25px;
+}
+
+.statistic_header h2{
+	font-size: 1.3rem;
+}
+
+.spendingDropDown{
+	display: flex;
+	align-items: center;
+}
+
+.spendingDropDown h3{
+	font-size: 1rem;
+	font-weight: 500;
+	margin-right: 5px;
+}
+
+.spendingDropDown i{
+	font-size: 0.7rem;
+	margin-right: 20px;
+}
+
+.grid_container > div:nth-child(4){
+	grid-column:  1 / span 2;
+}
+
+.graph{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0 30px;
+}
+
+.percentage-bar {
+	width: 30px; /* Set the width to control the thickness of the bar */
+	background-color: #ccc;
+	height: 330px; /* Set the height to control the length of the bar */
+	position: relative;
+	margin-bottom: 20px;
+	border-radius: 25px;
+}
+    
+.filler {
+	width: 100%;
+	background-color: #2c55d4;
+	position: absolute;
+	bottom: 0;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+	transition: border .5s;
+}
+
+.filler:hover::before{
+	content: "";
+	position: absolute;
+	right: 6px;
+	top: -8px;
+	border-radius: 50%;
+	border: 5px solid white;
+	width: 8px;
+	height: 8px;
+}
+.filler:hover::after{
+	content: "$15.k";
+	display: block;
+	background-color: #fff;
+	width: 3.5rem;
+	text-align: center;
+	padding: 0;
+	position: absolute;
+	left: -0.8rem;
+	top: -1.7rem;
+}
+
+.graph > div > h3{
+	font-weight: 500;
+}
+    
+    
